yaml-deploy-k8s/02-mongodb-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
