yaml-deploy-k8s/03-nogomet-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nogomet-virt
