yaml-deploy-k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nogomet-ingress
  namespace: nogomet-virt
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/acme-http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - nogomet.nik.si
      secretName: nogomet-tls
  rules:
    - host: nogomet.nik.si
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nogomet-virt-service
                port:
                  number: 3000
